Finish user signup2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <div class="container">
     <% flash.each do |key,value| %>
       <div class="alert alert-<%= key %>"><%= value %></div>
+      <%= "ambas lineas son iguales" %>
+      <%= content_tag(:div, value, class: "alert alert-#{key}")%>
     <% end %>
     <%= yield %>
   <%= render 'layouts/footer' %>
