--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top">
 <div class="navbar-inner">
   <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
+    <%= link_to "SSO Administrator", root_path, id: "logo" %>
     <nav>
     <ul class="nav pull-right">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "Help", help_path %></li>
+      <li><%= link_to "Inicio", root_path %></li>
+      <li><%= link_to "Ayuda", help_path %></li>
       <% if signed_in? %>
         <li><%= link_to "Users", users_path %></li>
         <li id="fat-menu" class="dropdown">
@@ -13,8 +13,8 @@
             Account <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <li><%= link_to "Perfil", current_user %></li>
+            <li><%= link_to "configuracion", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
           </ul>
