--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,23 @@
 <% provide(:title,'Home') %>
-<div class="center hero-unit">
-  <h1>Home</h1>
-  <h2>
-    SSO Manager
-    <a href="#">sitio de prueba</a>
-    2013.
-  </h2>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
+  <div class="center hero-unit">
+    <h1>Home</h1>
+    <h2>
+      SSO Manager
+      <a href="#">sitio de prueba</a>
+      2013.
+    </h2>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  </div>
+<% end %>
